# gdictthai

./: ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.in  gdictthai.desktop  gdictthai.glade
po/: Makefile  Makefile.in
src/: Makefile  Makefile.am  Makefile.in  callbacks.c  dictionary.c  dictionary.h  interface.c  interface.h  main.c  tdictthai.c
